--- a/advance.css
+++ b/advance.css
@@ -1,28 +1,39 @@
 #searchbutton{
-    background-color:#4d90fe;
-    border: 1px solid #3079ed;
-    color:white;
-    height:1.6em;
-    font-size:3em;
-  }
-  
-  #spacer{
-    padding-top:2em;
-  }
-  
-  .searchbox{
-    padding-left:8px;
-  }
-  
-  table{
-    padding-top:3em;
-    display:flex;
-    flex-flow:row wrap;
-    border-collapse: separate;
-    border-spacing: 15px;
-  }
-  
-  body{
+  background-color:#4d90fe;
+  border: 1px solid #3079ed;
+  color:white;
+  height:1.6em;
+  font-size:3em;
+}
+
+#spacer{
+  padding-top:2em;
+}
+
+.searchbox{
+  padding-left:8px;
+}
+
+table{
+  padding-top:3em;
+  display:flex;
+  flex-flow:row wrap;
+  border-collapse: separate;
+  border-spacing: 15px;
+}
+
+body{
+  display: flex;
+  justify-content: left;
+}
+
+#aligner {
     display: flex;
-    justify-content: left;
-  }
+    flex-direction: column; /* Align items in a column */
+    gap: 10px; /* Adjust the value to set the desired space */
+    position: absolute;
+    top: -1;
+    right: 0;
+}
+
+
